# ansible-content-parser

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  content-parser-clamav.Containerfile  content-parser.Containerfile  cspell.config.yaml  pipeline.sh  pyproject.toml  requirements.txt  sonar-project.properties  tox.ini
.config/: dictionary.txt  requirements-dev.txt  requirements-test.txt  requirements.in
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: build.yml  malware_scan.yml  release.yml
ansible-content-parser/: parser.py
ansible_content_parser/: ansiblelint_main.py  parser.py  report.py
ansible_content_parser/parser/: content_parser.py  downloader.py  lint.py  report.py
ansible_content_parser/ui/: app.py
ansible_content_parser/views/: files.tpl  filetype_summary.tpl  head.tpl  lint.tpl  matches.tpl  module_summary.tpl
sample_report/: README.md  findings.json  lint-result.json  sample_report.txt
src/ansible_content_parser/: __init__.py  __main__.py  _version.py  downloader.py  gen_ftdata.py  lint.py  lintable_dict.py  pipeline.py  report.py  safe_checks.py  version.py
src/ansiblecontentparser/: __init__.py  __main__.py  report.py
test/: test_main.py
tests/: test_main.py  test_safe_checks.py
